# NemuriXR

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: config.rs  ipc.rs  lib.rs  state.rs
crates/overlay/: Cargo.toml  build.rs
crates/overlay/src/: blocker.rs  client.rs  detector.rs  main.rs  mathx.rs  theme.rs
crates/overlay/src/overlay/: input.rs  laser.rs  mod.rs  panel.rs  session.rs
crates/overlay/src/ui/: mod.rs  quickmenu.rs
desktop/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
desktop/scripts/: stage-overlay.sh
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: audio.rs  brightness.rs  lib.rs  main.rs  osc.rs  oscquery.rs  overlay_launcher.rs  safety_net.rs  schedule.rs  sound.rs  trackers.rs  udev.rs  update.rs  vrchat.rs  vrchat_api.rs  vrchat_feature.rs
desktop/src/lib/: api.ts  sleepingPosePresets.ts  state.svelte.ts  types.ts
desktop/src/lib/components/: AlarmBanner.svelte  Backdrop.svelte  BeyondRuleModal.svelte  FriendPicker.svelte  GlassCard.svelte  InviteMessageEditor.svelte  OscRow.svelte  Slider.svelte  TitleBar.svelte  Toggle.svelte  UpdateBanner.svelte  VrchatAccount.svelte  VrchatLive.svelte  WindowControls.svelte
desktop/src/lib/views/: AudioView.svelte  BrightnessView.svelte  OscView.svelte  Placeholder.svelte  SettingsView.svelte  StatusView.svelte  VrchatView.svelte
desktop/src/lib/views/settings/: Account.svelte  Commands.svelte  General.svelte  Schedule.svelte  SleepDetection.svelte
desktop/src/lib/views/vrchat/: AutoAccept.svelte  JoinNotifications.svelte  SafetyNet.svelte  SleepingPose.svelte  StatusAutomations.svelte
desktop/src/routes/: +layout.ts  +page.svelte
