[workspace]
resolver = "2"
members = ["crates/core", "crates/overlay"]
# The Tauri desktop app (desktop/src-tauri) is its own workspace so its heavy
# web/webkit dependency tree stays out of the always-on overlay/core build.
exclude = ["desktop"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
nemurixr-core = { path = "crates/core" }
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
