[package]
name = "nemurixr-desktop"
version = "0.1.0"
description = "NemuriXR desktop configuration app"
authors = ["Eidenz"]
edition = "2021"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin (Windows quirk).
name = "nemurixr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
libmonado = { git = "https://github.com/wayvr-org/libmonado-rs.git", rev = "6f66b26930c24a8a2fc57ddcd85704784894c750", version = "1.6.0" }
nemurixr-core = { path = "../../crates/core" }

# Own workspace, isolated from the overlay/core workspace (and its VR deps).
[workspace]
