[package]
name = "nemurixr-desktop"
version = "0.4.0"
description = "NemuriXR desktop configuration app"
authors = ["Eidenz"]
edition = "2021"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin (Windows quirk).
name = "nemurixr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
rosc = "0.11"
mdns-sd = "0.20"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libmonado = { git = "https://github.com/wayvr-org/libmonado-rs.git", rev = "6f66b26930c24a8a2fc57ddcd85704784894c750", version = "1.6.0" }
nemurixr-core = { path = "../../crates/core" }

# VRChat API
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tungstenite = { version = "0.29", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
base64 = "0.22"
urlencoding = "2"

# Own workspace, isolated from the overlay/core workspace (and its VR deps).
[workspace]
